--- a/public/index.html
+++ b/public/index.html
@@ -3,9 +3,10 @@
 <head>
   <meta charset="UTF-8">
   <title>Hello, world</title>
+  <link href="https://fonts.googleapis.com/css?family=Roboto:300,400,500" rel="stylesheet">
 </head>
 <body>
   <div id="root"></div>
-  <script type="text/javascript" src="public/bundle.js" charset="utf-8"></script>
+  <script type="text/javascript" src="bundle.js" charset="utf-8"></script>
 </body>
 </html>
