--- a/assets/party.html
+++ b/assets/party.html
@@ -5,7 +5,7 @@
     <title>Party Counter</title>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" integrity="sha384-1q8mTJOASx8j1Au+a5WDVnPi2lkFfwwEAa8hDDdjZlpLegxhjVME1fgjWPGmkzs7" crossorigin="anonymous">
     <style>
-			    	html, body{
+			html, body{
 				height: 100%;
 				width: 100%;
 				color: gray;
@@ -36,6 +36,9 @@
 				text-align: center;
 				min-height: 100%;
 			    height: 100%;
+			}
+			h1{
+				font-size: 7.5em;
 			}
     </style>
 
