--- a/assets/index.html
+++ b/assets/index.html
@@ -5,7 +5,7 @@
   <title>Phi Sigma Kappa | Rutgers</title>
   <link href="https://fonts.googleapis.com/css?family=Roboto:300,400,500" rel="stylesheet">
 </head>
-<body>
+<body style="background-color: #E0E0E0">
   <div id="root"></div>
   <script type="text/javascript" src="bundle.js" charset="utf-8"></script>
 </body>
