--- a/assets/index.html
+++ b/assets/index.html
@@ -3,6 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <title>Phi Sigma Kappa | Rutgers</title>
+  <link rel="shortcut icon" href="favicon.ico" />
   <link href="https://fonts.googleapis.com/css?family=Roboto:300,400,500" rel="stylesheet">
 </head>
 <body style="background-color: #E0E0E0">
